intel/bench_214/extr_.linuxfsafsmisc.c_afs_abort_to_error_with_main/log.txt
bench_214/extr_.linuxfsafsmisc.c_afs_abort_to_error_with_main/extr_.linuxfsafsmisc.c_afs_abort_to_error_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
